--- a/style.css
+++ b/style.css
@@ -69,3 +69,16 @@ body {
   position: relative;
   top: 6px;
 }
+
+
+#start,#stop{
+  color: white;
+}
+
+#start{
+  background: green;
+}
+
+#stop{
+  background:red;
+}
